@@ -2,6 +2,7 @@ package console
 
 import (
 	"encoding/json"
+	"fmt"
 	"os"
 
 	"github.com/elastic/beats/libbeat/common"
@@ -16,32 +17,26 @@ func init() {
 
 type console struct {
 	config config
+	out    *os.File
 }
 
 func New(_ string, config *common.Config, _ int) (outputs.Outputer, error) {
-	c := &console{config: defaultConfig}
+	c := &console{config: defaultConfig, out: os.Stdout}
 	err := config.Unpack(&c.config)
 	if err != nil {
 		return nil, err
 	}
+
+	// check stdout actually being available
+	if _, err = c.out.Stat(); err != nil {
+		return nil, fmt.Errorf("console output initialization failed with: %v", err)
+	}
+
 	return c, nil
 }
 
 func newConsole(pretty bool) *console {
-	return &console{config{pretty}}
-}
-
-func writeBuffer(buf []byte) error {
-	written := 0
-	for written < len(buf) {
-		n, err := os.Stdout.Write(buf[written:])
-		if err != nil {
-			return err
-		}
-
-		written += n
-	}
-	return nil
+	return &console{config: config{pretty}, out: os.Stdout}
 }
 
 // Implement Outputer
@@ -68,10 +63,10 @@ func (c *console) PublishEvent(
 		return err
 	}
 
-	if err = writeBuffer(jsonEvent); err != nil {
+	if err = c.writeBuffer(jsonEvent); err != nil {
 		goto fail
 	}
-	if err = writeBuffer([]byte{'\n'}); err != nil {
+	if err = c.writeBuffer([]byte{'\n'}); err != nil {
 		goto fail
 	}
 
@@ -83,4 +78,17 @@ fail:
 	}
 	op.SigFailed(s, err)
 	return err
+}
+
+func (c *console) writeBuffer(buf []byte) error {
+	written := 0
+	for written < len(buf) {
+		n, err := c.out.Write(buf[written:])
+		if err != nil {
+			return err
+		}
+
+		written += n
+	}
+	return nil
 }
