@@ -46,8 +46,9 @@ func event(k, v string) common.MapStr {
 	return common.MapStr{k: v}
 }
 
-func run(c *console, events ...common.MapStr) (string, error) {
+func run(pretty bool, events ...common.MapStr) (string, error) {
 	return withStdout(func() {
+		c := newConsole(pretty)
 		for _, event := range events {
 			c.PublishEvent(nil, outputs.Options{}, event)
 		}
@@ -55,21 +56,21 @@ func run(c *console, events ...common.MapStr) (string, error) {
 }
 
 func TestConsoleOneEvent(t *testing.T) {
-	lines, err := run(newConsole(false), event("event", "myevent"))
+	lines, err := run(false, event("event", "myevent"))
 	assert.Nil(t, err)
 	expected := "{\"event\":\"myevent\"}\n"
 	assert.Equal(t, expected, lines)
 }
 
 func TestConsoleOneEventIndented(t *testing.T) {
-	lines, err := run(newConsole(true), event("event", "myevent"))
+	lines, err := run(true, event("event", "myevent"))
 	assert.Nil(t, err)
 	expected := "{\n  \"event\": \"myevent\"\n}\n"
 	assert.Equal(t, expected, lines)
 }
 
 func TestConsoleMultipleEvents(t *testing.T) {
-	lines, err := run(newConsole(false),
+	lines, err := run(false,
 		event("event", "event1"),
 		event("event", "event2"),
 		event("event", "event3"),
@@ -81,7 +82,7 @@ func TestConsoleMultipleEvents(t *testing.T) {
 }
 
 func TestConsoleMultipleEventsIndented(t *testing.T) {
-	lines, err := run(newConsole(true),
+	lines, err := run(true,
 		event("event", "event1"),
 		event("event", "event2"),
 		event("event", "event3"),
